# RandomForest_BornAgain

./: main_shakaar_2.py
BATREES/BA-Trees-master/docs/src/: CREATE_DATASETS.py  main_shakaar.py  random_forests.py
MurTree/murtree-master/: CMakeLists.txt  CREATE_DATASETS.py  continuousToCategorical.r  datasets.py  main_shakaar_MurTree copy.py  main_shakaar_MurTree.py  random_forests.py
MurTree/murtree-master/output_new/: distill_AGE_fold1_T10_D10.csv  distill_AGE_fold1_T5_D10.csv  distill_AGE_fold2_T10_D10.csv  distill_AGE_fold2_T5_D10.csv  distill_AGE_fold3_T10_D10.csv  distill_AGE_fold3_T5_D10.csv
MurTree/murtree-master/output_new/RF/AGE/: AGE.RF1.T10.D10.txt  AGE.RF1.T5.D10.txt  AGE.RF2.T10.D10.txt  AGE.RF2.T5.D10.txt  AGE.RF3.T10.D10.txt  AGE.RF3.T5.D10.txt
MurTree/murtree-master/resources/datasets/AGE/: AGE.test1.csv  AGE.test10.csv  AGE.test2.csv  AGE.test3.csv  AGE.test4.csv  AGE.test5.csv  AGE.test6.csv  AGE.test7.csv  AGE.test8.csv  AGE.test9.csv  AGE.train1.csv  AGE.train10.csv  AGE.train2.csv  AGE.train3.csv  AGE.train4.csv  AGE.train5.csv  AGE.train6.csv  AGE.train7.csv  AGE.train8.csv  AGE.train9.csv  binaryyyy.txt
